[workspace]
resolver = "2"
members = [
    "crates/arena-allocator",
    "crates/background_worker",
    "crates/demozoo-fetcher",
    "crates/fileorama",
    "crates/flowi-api",
    "crates/flowi_core", 
    "crates/flowi_sw_renderer", "crates/frontend-api",
    "crates/image", "crates/job-system",
    "crates/simd",
    "main", 
    "tests/renderer_tests",
    "tests/test_bed",
]

# [profile.dev.package.zune-png]
# opt-level = 3

# [profile.dev.package.zune-jpeg]
# opt-level = 3

# [profile.dev.package.resvg]
# opt-level = 3

[profile.dev.package.flowi_sw_renderer]
opt-level = 3

# [profile.dev.package.image-scaler]
# opt-level = 3

# [profile.release]
# opt-level = 3
# lto = "fat"

