[package]
name = "flowi_core"
version = "0.1.0"
edition = "2021"

[dependencies]
base64ct = { version = "1.6.0", features = ["alloc"] }
raw-window-handle = "0.5"
bitflags = "2.0.0-rc.1"
bytemuck = "1.14.0"
fileorama = { path = "../fileorama" }
glam = "0.23.0"
log = "0.4"
notify = "5.1.0"
sha2 = "0.10.6"
thiserror = "1.0"
zune-jpeg = "0.4"
zune-png = "0.4"
gif = "0.12"
gif-dispose = "4.0"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }

[features]
default = ["static"]
static = []
