[package]
name = "flowi_core"
version = "0.1.0"
edition = "2021"

[dependencies]
base64ct = { version = "1.6.0", features = ["alloc"] }
raw-window-handle = "0.5"
bitflags = "2.5.0"
bytemuck = "1.14.0"
fileorama = { path = "../fileorama" }
glam = "0.23.0"
log = "0.4"
notify = "5.1.0"
sha2 = "0.10.6"
thiserror = "1.0"
zune-image = { version = "0.4", default-features = false, features = ["metadata", "jpeg", "png"] }
zune-core = "0.4.12"
arena-allocator = "0.1.0"
resvg = { version = "0.36.0", features = [] }

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }

[features]
default = ["static"]
static = []
