[package]
name = "fileorama"
license = "MIT"
authors = ["Daniel Collin <daniel@collin.com>"]
description = "WIP Virtual File System"
keywords = ["virtual", "io", "file"]
categories = ["Filesystem"]
repository = "https://github.com/emoon/fileorama"
documentation = "https://docs.rs/fileorama/0.01/fileorama"
readme = "README.md"
version = "0.0.2"
edition = "2021"

exclude = ["data/"]

[badges]
maintained = { status = "actively-developed" }

[dependencies]
crossbeam-channel = "0.5"
thiserror = "2.0"
log = "0.4"
walkdir = "2"
zip = "2.2"
suppaftp = { version = "^6", features = ["native-tls"] }
bytemuck = "1.14.0"
