[package]
name = "flowi"
version = "0.1.0"
edition = "2021"

[dependencies]
raw-window-handle = "0.5"
glam = "0.24"
bitflags = "2.0.0-rc.1"
flowi_core = { path = "../flowi_core" }

# [dependencies.sdl2]
# version = "0.36"
# default-features = false
# features = ["bundled", "hidapi", "unsafe_textures"]
