[package]
name = "flowi"
version = "0.1.0"
edition = "2021"

[dependencies]
flowi_core = { path = "../flowi_core" }
flowi_sw_renderer = { path = "../flowi_sw_renderer" }
png = "0.16"
tracy-client = "0.18.0"

[dependencies.sdl2]
path = "../rust-sdl2"
default-features = false
features = ["bundled", "unsafe_textures"]
