[package]
name = "flowi_core"
version = "0.1.0"
edition = "2021"

[dependencies]
base64ct = { version = "1.6.0", features = ["alloc"] }
raw-window-handle = "0.6"
bytemuck = "1.14.0"
fileorama = { path = "../fileorama" }
glam = "0.29.0"
log = "0.4"
notify = "8.0"
sha2 = "0.10.6"
thiserror = "2.0"
zune-image = { version = "0.4", default-features = false, features = ["metadata", "jpeg", "png"] }
zune-core = "0.4.12"
arena-allocator = { path = "../arena-allocator" }
resvg = { version = "0.44.0", features = [] }
smallvec = "1.13"
bitflags = "2.7.0"
tracing = { version = "0.1", features = ["log"] }
