[package]
name = "flowi_core"
version = "0.1.0"
edition = "2021"

[dependencies]
job-system = { path = "../job-system" }
arena-allocator = { path = "../arena-allocator" }
background-worker = { path = "../background_worker" }
bitflags = "2.7.0"
clay-layout = { path = "../clay_layout" }
cosmic-text = { version = "0.12", default-features = false, features = ["std", "swash"] }
glam = "0.30.0"
log = "0.4"
notify = "8.0"
raw-window-handle = "0.6"
resvg = { version = "0.44.0", features = [] }
smallvec = "1.13"
thiserror = "2.0"
fxhash = "0.2"
tracing = { version = "0.1", features = ["log"] }
zune-core = "0.4.12"
zune-image = { version = "0.4", default-features = false, features = ["metadata", "jpeg", "png"] }
ureq = "3.0"
simd = { path = "../simd" }
priority-queue = "2"
tracy-client = "0.18.0"
