[package]
name = "testbed_replay"
version = "0.1.0"
authors = ["Daniel Collin <daniel@collin.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
khronos-egl = { path = "../../external/khronos-egl" }
input = "0.5"

[patch.crates-io]
libudev-sys = { path = "../../external/libudev-sys" }

