[package]
name = "test_bed"
version = "0.1.0"
edition = "2021"

[dependencies]
arena-allocator = { path = "../../crates/arena-allocator" }
env_logger = "0.10"
flowi-api = { path = "../../crates/flowi-api" }
flowi = { path = "../../crates/flowi" }
image = { path = "../../crates/image" }
log = "0.4"
nanoserde = { version = "0.2.0-beta.0", default-features = false, features = ["std", "json"] }
fxhash = "0.2"
ureq = "3.0"

[features]
default = []
