[package]
name = "test_bed"
version = "0.1.0"
edition = "2021"

[dependencies]
arena-allocator = { path = "../../crates/arena-allocator" }
env_logger = "0.10"
flowi = { path = "../../crates/flowi" }
log = "0.4"
online-demo-display = { path = "../../crates/online-demo-display" }
tracy-client = "0.18.0"

[features]
default = []
